prod/back/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-back
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deployment-back-pod
  template:
    metadata:
      labels:
        app: deployment-back-pod
    spec:
      containers:
      - name: container-back
        image: potap2001/back:k8s
        resources:

        ports:
        - name: http 
          containerPort: 3000
