prod/back/service.yml
apiVersion: v1
kind: Service
metadata:
  name: service-back
  namespace: prod
spec:
  selector:
    app: deployment-back-pod
  ports:
  - port: 80
    targetPort: http
